# gtracer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: comprehensive.md  documentation.md
src/gtracer/: __init__.py  callbacks.py  logger.py  tracer.py
