[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project]
name = "gtracer"
version = "0.2.1"
description = "Lightweight span-based tracing for LangChain/LangGraph agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Georgios Agrafiotis", email = "arafiet1991@gmail.com" },
]
keywords = ["langchain", "langgraph", "tracing", "observability", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "langchain-core>=1.2.23",
]


[project.urls]
Repository = "https://github.com/balalaika-tools/gtracer"
Documentation = "https://github.com/balalaika-tools/gtracer/blob/main/docs/documentation.md"

[tool.uv-build]
include = [
  "CHANGELOG.md",
  "docs/",
]

